docs: README vehicle-first 재작성 (플랫폼 내용은 상속 섹션으로 강등)